tests/snapshots/integration__integration_tests__remove__remove_default_branch_no_tautology.snap
---
source: tests/integration_tests/remove.rs
info:
  program: wt
  args:
    - remove
    - "--foreground"
    - main
  env:
    CLICOLOR_FORCE: ""
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    RUST_LOG: warn
    SHELL: ""
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
◎ Removing main worktree...
✓ Removed main worktree & branch
